# backend

./: .coveragerc  .coveragerc_env  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.en.md  README.md  http_log_replay.py  http_room_serve.py  http_serve.py  http_test_serve.py  main.py  network.py  pyproject.toml  pytest.ini  pytest_env.ini  requirements.txt  update.md  utils.py
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: build-test.yml  pre-commit.yaml  publish-test.yml  publish.yml  pytest-rl.yml  pytest.yml  remove-closed-issue-label.yml  rl-build-test.yml
agents/: __init__.py  agent_base.py  interaction_agent.py  nothing_agent.py  random_agent.py
docs/: CONTRIBUTING.md  README.ch.md  cards.md  charactors.md  conf.py  index.rst
docs/source/: lpsim.agents.rst  lpsim.network.rst  lpsim.rst  lpsim.server.card.equipment.artifact.rst  lpsim.server.card.equipment.rst  lpsim.server.card.equipment.weapon.rst  lpsim.server.card.event.rst  lpsim.server.card.rst  lpsim.server.card.support.rst  lpsim.server.character.anemo.rst  lpsim.server.character.cryo.rst  lpsim.server.character.custom.rst  lpsim.server.character.dendro.rst  lpsim.server.character.electro.rst  lpsim.server.character.geo.rst  lpsim.server.character.hydro.rst  lpsim.server.character.pyro.rst  lpsim.server.character.rst  lpsim.server.patch.rst  lpsim.server.patch.v43.balance.rst  lpsim.server.patch.v43.cards.rst  lpsim.server.patch.v43.characters.rst  lpsim.server.patch.v43.rst  lpsim.server.rst  lpsim.server.status.character_status.rst  lpsim.server.status.rst  lpsim.server.status.team_status.rst  lpsim.server.summon.rst  lpsim.utils.rst  modules.rst
ipynb/: get_status_icon_type.ipynb  message.json  pack_default_patch.ipynb  pack_detault_patch.ipynb  parse_name_descs.ipynb  parse_name_type.ipynb  result.json
network/: __init__.py  fastapi.py
resources/: consts.py
server/: __init__.py  action.py  consts.py  deck.py  dice.py  die.py  elemental_reaction.py  event.py  event_handler.py  interaction.py  match.py  modifiable_values.py  object_base.py  player_table.py  registry.py  response.py  struct.py
server/buff/: BuffBase.py  __init__.py
server/card/: CardBase.py  __init__.py  card_base.py
server/charactor/: mob.py  (+6 more)
templates/: card.py  character.py  charactor.py  test.py
tests/: default_random_state.py  template.py  utils_for_test.py
tests_env/: test_dice_selection.py
(+868 files in other folders)
