[build-system]
requires = ["setuptools>=68.2.2", "setuptools-scm>=7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lpsim"
dynamic = ["version"]
authors = [{ name = "Zyr17", email = "jzjqz17@gmail.com" }]
description = "Lochfolk Prinzessin Simulator, which simulates Genius Invokation TCG"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "pydantic==1.10.14",
    "typing_extensions",
    "dictdiffer",
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "build",
    "numpy",
    "setuptools-scm", 
    "pytest", 
    "pytest-cov", 
    "pytest-xdist", 
    "pyright",
]

[project.urls]
"Homepage" = "https://github.com/LPSim/backend"
"Bug Tracker" = "https://github.com/LPSim/backend/issues"

[tool.setuptools_scm]
write_to = "src/lpsim/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.typos]
files.extend-exclude = ["/src/lpsim/utils/deck_code_data.json"]

[tool.typos.default.extend-words]
Invokation = "Invokation"

[tool.ruff]
exclude = ["templates"]

[tool.pyright]
typeCheckingMode = "basic"
include = ["src", "tests"]
